--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,7 +7,7 @@ on:
 
 env:
   APP_NAME: Expresso
-  MAIN_CLASS: com.diezam04.expresso.Cli
+  MAIN_CLASS: com.diezam04.expresso.Expressor
 
 jobs:
   build-jar:
