--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -157,9 +157,9 @@ jobs:
       - name: Build MSI (WiX)
         shell: powershell
         run: |
-          & "$env:WIX\bin\candle.exe" -arch x64 -dSourceDir="$(Join-Path $PWD "out\$env:APP_NAME")" packaging/windows/product.wxs harvest.wxs
+          & "$env:WIX\bin\candle.exe" -arch x64 -dSourceDir="$(Join-Path $PWD "out\$env:APP_NAME")" -out obj\ packaging/windows/product.wxs harvest.wxs
           New-Item -ItemType Directory -Force -Path dist | Out-Null
-          & "$env:WIX\bin\light.exe" -ext WixUtilExtension -o "dist\expressor-1.0.msi" packaging/windows/product.wixobj harvest.wixobj
+          & "$env:WIX\bin\light.exe" -ext WixUtilExtension -o "dist\expressor-1.0.msi" obj\product.wixobj obj\harvest.wixobj
 
 
       - name: Upload .msi
