--- a/.github/workflows/build-delivery.yaml
+++ b/.github/workflows/build-delivery.yaml
@@ -159,7 +159,8 @@ jobs:
         run: |
           & "$env:WIX\bin\candle.exe" -arch x64 -dSourceDir="$(Join-Path $PWD "out\$env:APP_NAME")" -out obj\ packaging/windows/product.wxs harvest.wxs
           New-Item -ItemType Directory -Force -Path dist | Out-Null
-          & "$env:WIX\bin\light.exe" -ext WixUtilExtension -o "dist\expressor-1.0.msi" obj\product.wixobj obj\harvest.wixobj
+          & "$env:WIX\bin\light.exe" -ext WixUtilExtension -sval -o "dist\expressor-1.0.msi" obj\product.wixobj obj\harvest.wixobj
+
 
 
       - name: Upload .msi
