--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -37,9 +37,9 @@ jobs:
           echo "Testing ${{ steps.pick.outputs.jar_name }}"
           java -jar "target/${{ steps.pick.outputs.jar_name }}"
           java -jar "target/${{ steps.pick.outputs.jar_name }}" --help
-          java -jar "target/${{ steps.pick.outputs.jar_name }}" transpile --out output HelloWorld.Expresso
-          java -jar "target/${{ steps.pick.outputs.jar_name }}" build --out output HelloWorld.Expresso
-          java -jar "target/${{ steps.pick.outputs.jar_name }}" run --out output HelloWorld.Expresso
+          java -jar "target/${{ steps.pick.outputs.jar_name }}" transpile --out output HelloWorld.Expresso --verbose
+          java -jar "target/${{ steps.pick.outputs.jar_name }}" build --out output HelloWorld.Expresso --verbose
+          java -jar "target/${{ steps.pick.outputs.jar_name }}" run --out output HelloWorld.Expresso --verbose
 
       - name: Discord notify success (apps deployment)
         if: success()
