--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 target
 dependency-reduced-pom.xml
 .vscode/launch.json
-.gitignore
 helloworld.java
 helloworld.class
 .vscode/settings.json
+HelloWorld.java
+HelloWorld.class
