--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -28,17 +28,17 @@ jobs:
       - name: Pick main JAR
         id: pick
         shell: bash
-        run: echo "jar_name=$(basename $(ls target/*-runner.jar 2>/dev/null || ls target/*.jar | head -n1))" >> "$GITHUB_OUTPUT"
+        run: echo "jar_name=$(basename $(ls expresso-cli/target/*.jar 2>/dev/null || ls expresso-cli/target/*.jar | head -n1))" >> "$GITHUB_OUTPUT"
 
 
       - name: Test JAR
         run: |
           echo "Testing ${{ steps.pick.outputs.jar_name }}"
-          java -jar "target/${{ steps.pick.outputs.jar_name }}"
-          java -jar "target/${{ steps.pick.outputs.jar_name }}" --help
-          java -jar "target/${{ steps.pick.outputs.jar_name }}" transpile --out output HelloWorld.Expresso --verbose
-          java -jar "target/${{ steps.pick.outputs.jar_name }}" build --out output HelloWorld.Expresso --verbose
-          java -jar "target/${{ steps.pick.outputs.jar_name }}" run --out output HelloWorld.Expresso --verbose
+          java -jar "expresso-cli/target/${{ steps.pick.outputs.jar_name }}"
+          java -jar "expresso-cli/target/${{ steps.pick.outputs.jar_name }}" --help
+          java -jar "expresso-cli/target/${{ steps.pick.outputs.jar_name }}" transpile --out output HelloWorld.Expresso --verbose
+          java -jar "expresso-cli/target/${{ steps.pick.outputs.jar_name }}" build --out output HelloWorld.Expresso --verbose
+          java -jar "expresso-cli/target/${{ steps.pick.outputs.jar_name }}" run --out output HelloWorld.Expresso --verbose
 
       - name: Discord notify success (apps deployment)
         if: success()
@@ -51,16 +51,16 @@ jobs:
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
 
-      - name: Discord notify failure (apps deployment)
-        if: failure()
-        uses: Ilshidur/action-discord@0.3.2
-        with:
-          args: |
-            🖥️ ❌ Failed Testing in development.
-            Commit `${{ github.sha }}`
-            Logs: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
-        env:
-          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }} 
+      # - name: Discord notify failure (apps deployment)
+      #   if: failure()
+      #   uses: Ilshidur/action-discord@0.3.2
+      #   with:
+      #     args: |
+      #       🖥️ ❌ Failed Testing in development.
+      #       Commit `${{ github.sha }}`
+      #       Logs: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+      #   env:
+      #     DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }} 
 
 
 
