--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -5,7 +5,7 @@ on:
 
 env:
   APP_NAME: expressor
-  MAIN_CLASS: com.diezam04.expresso.Expressor
+  MAIN_CLASS: com.diezam04.expresso.adapters.cli.Cli
 
 jobs:
   build-jar:
