--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -31,8 +31,11 @@ jobs:
         id: pick
         shell: bash
         run: |
-          jar=$(ls -1 target/*.jar 2>/dev/null)
+          jar=$(find . -type f \( -path "*/target/*-runner.jar" -o -path "*/target/*-shaded.jar" -o -path "*/target/*.jar" \) | head -n1)
+          test -n "$jar"
           echo "jar_name=$(basename "$jar")" >> "$GITHUB_OUTPUT"
+          echo "jar_path=$jar" >> "$GITHUB_OUTPUT"
+
 
       - name: Upload JARs
         uses: actions/upload-artifact@v4
