--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -36,13 +36,13 @@ jobs:
           echo "jar_name=$(basename "$jar")" >> "$GITHUB_OUTPUT"
           echo "jar_path=$jar" >> "$GITHUB_OUTPUT"
 
-
       - name: Upload JARs
         uses: actions/upload-artifact@v4
         with:
-          name: app-jar
-          path: target/*.jar
+          name: $APP_NAME-$VERSION.jar
+          path: ${{ steps.pick.outputs.jar_path }}/${{ steps.pick.outputs.jar_name }}
           if-no-files-found: error
+
 
   cli-installer-deb:
     needs: build-jar
