--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -71,7 +71,7 @@ jobs:
       - name: Download JARs
         uses: actions/download-artifact@v4
         with:
-          name: ${{APP_NAME}}-${{VERSION}}.jar
+          name: "${{ env.APP_NAME }}-${{ env.VERSION }}.jar"
           path: target
 
       - name: Write Debian maintainer scripts (symlink in PATH)
@@ -115,7 +115,7 @@ jobs:
       - name: Upload .deb artifact
         uses: actions/upload-artifact@v4
         with:
-          name: $APP_NAME-$VERSION
+          name: "${{ env.APP_NAME }}-${{ env.VERSION }}.deb"
           path: dist/*.deb
           if-no-files-found: error
   
@@ -179,7 +179,7 @@ jobs:
         uses: Ilshidur/action-discord@0.3.2
         with:
           args: |
-            🖥️ ✅ App $APP_NAME-$VERSION PASSED the tests.
+            🖥️ ✅ App "${{ env.APP_NAME }}-${{ env.VERSION }}" PASSED the tests.
             Commit `${{ github.sha }}`
             Logs: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
         env:
