--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -174,54 +174,71 @@ jobs:
           path: dist/*.msi
           if-no-files-found: error
 
-      - name: Discord notify success (apps deployment)
-        if: success()
-        uses: Ilshidur/action-discord@0.3.2
-        with:
-          args: |
-            🖥️ ✅ App "${{ env.APP_NAME }}-${{ env.VERSION }}" PASSED the tests.
-            Commit `${{ github.sha }}`
-            Logs: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
-        env:
-          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+  Create-cli-Release:
+  runs-on: ubuntu-latest
+  needs:
+    - cli-installer-deb
+    - cli-installer-msi
 
-      - name: Discord notify failure (apps deployment)
-        if: failure()
-        uses: Ilshidur/action-discord@0.3.2
-        with:
-          args: |
-            🖥️ ❌ App $APP_NAME-$VERSION FAILED the tests.
-            Commit `${{ github.sha }}`
-            Logs: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
-        env:
-          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }} 
+  steps:
+    - uses: actions/checkout@v4
 
-  create-cli-Release:
-    runs-on: ubuntu-latest
-    needs:
-      - cli-installer-deb
-      - cli-installer-msi
+    - name: Download built JAR
+      uses: actions/download-artifact@v4
+      with:
+        name: "${{ env.APP_NAME }}-${{ env.VERSION }}.jar"
+        path: artifacts
 
-    steps:
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2
-        with:
-          generate_release_notes: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Download .deb
+      uses: actions/download-artifact@v4
+      with:
+        name: "${{ env.APP_NAME }}-${{ env.VERSION }}.deb"
+        path: artifacts
 
-      - name: Upload java jar artifact
-        uses: softprops/action-gh-release@v2
-        with:
-          files: target/*.jar
+    - name: Download .msi
+      uses: actions/download-artifact@v4
+      with:
+        name: ${{ env.APP_NAME }}-${{ env.VERSION }}
+        path: artifacts
 
-      - name: Upload Linux deb installer artifact
-        uses: softprops/action-gh-release@v2
-        with:
-          files: target/*.deb
+    - name: Create GitHub Release + upload assets
+      id: gh_release
+      uses: softprops/action-gh-release@v2
+      with:
+        generate_release_notes: true
+        files: |
+          artifacts/*.jar
+          artifacts/*.deb
+          artifacts/*.msi
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      
-      - name: Upload Windows msi installer artifact
-        uses: softprops/action-gh-release@v2
-        with:
-          files: target/*.msi
+    - name: Discord notify (success)
+      if: ${{ success() }}
+      uses: Ilshidur/action-discord@0.3.2
+      env:
+        DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+      with:
+        args: |
+          ✅ **Release created**
+          • App: **${{ env.APP_NAME }}** v${{ env.VERSION }}
+          • Tag: `${{ github.ref_name }}`
+          • Author: ${{ github.actor }}
+          • Commit: `${{ github.sha }}`
+          • Release: ${{ steps.gh_release.outputs.html_url }}
+          • Run: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+
+    - name: Discord notify (failure)
+      if: ${{ failure() }}
+      uses: Ilshidur/action-discord@0.3.2
+      env:
+        DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+      with:
+        args: |
+          ❌ **Release failed**
+          • App: **${{ env.APP_NAME }}** v${{ env.VERSION }}
+          • Ref: `${{ github.ref_name }}`
+          • Author: ${{ github.actor }}
+          • Run: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+
+
