--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -8,13 +8,10 @@ env:
   APP_NAME: expressor
   MAIN_CLASS: com.diezam04.expresso.adapters.cli.Cli
   VERSION: 1.1.2
-# at top or per-job
-permissions:
-  contents: write
 
 jobs:
 
-  build-cli-jar:
+  build-jar:
     runs-on: ubuntu-latest
     outputs:
       jar_name: ${{ steps.pick.outputs.jar_name }}
@@ -175,9 +172,12 @@ jobs:
           path: dist/*.msi
           if-no-files-found: error
 
-  Release:
+
+  Create-cli-Release:
     runs-on: ubuntu-latest
-    needs: [cli-installer-deb, cli-installer-msi]
+    needs:
+      - cli-installer-deb
+      - cli-installer-msi
 
     steps:
       - uses: actions/checkout@v4
@@ -197,16 +197,13 @@ jobs:
       - name: Download .msi
         uses: actions/download-artifact@v4
         with:
-          name: ${{ env.APP_NAME }}-${{ env.VERSION }}
+          name: ${{ env.APP_NAME }}-${{ env.VERSION }}.msi
           path: artifacts
 
       - name: Create GitHub Release + upload assets
         id: gh_release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: "v${{ env.VERSION }}"          # <-- create/use this tag
-          target_commitish: ${{ github.sha }}      # <-- point tag to this commit
-          name: "${{ env.APP_NAME }} v${{ env.VERSION }}"
           generate_release_notes: true
           files: |
             artifacts/*.jar
@@ -224,7 +221,7 @@ jobs:
           args: |
             ✅ **Release created**
             • App: **${{ env.APP_NAME }}** v${{ env.VERSION }}
-            • Tag: `v${{ env.VERSION }}`
+            • Tag: `${{ github.ref_name }}`
             • Author: ${{ github.actor }}
             • Commit: `${{ github.sha }}`
             • Release: ${{ steps.gh_release.outputs.html_url }}
@@ -242,3 +239,5 @@ jobs:
             • Ref: `${{ github.ref_name }}`
             • Author: ${{ github.actor }}
             • Run: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+
+
